--- a/inclass_website/index.html
+++ b/inclass_website/index.html
@@ -17,6 +17,7 @@
             
         </ul>
     </nav>
+    <p id=cat>The cat or domestic cat (Felis catus) is a small carnivorous mammal. It is the only domesticated species in the family Felidae. The cat is either a house cat, kept as a pet; or a feral cat, freely ranging and avoiding human contact. A house cat is valued by humans for companionship and for its ability to hunt rodents. About 60 cat breeds are recognized by various cat registries.</p>
 
     
 </body>
