--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
     <button class="scrollToTopBtn">☝️</button>
     
     <!-- bootstrap css file-->
-    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="./bootstrap.min.css">
 
     <!-- font awesome icons -->
-    <link rel="stylesheet" href="css/all.min.css">
+    <link rel="stylesheet" href="./all.min.css">
  
 
     <!--  custom css file  -->
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./style.css">
 
 
 </head>
