--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                             <h4 class="title-text text-uppercase" style="font-family:Optima, Segoe, Segoe UI, Candara, Calibri, Arial, sans-serif;">UI/UX Designer</h4>
                             <div class="site-buttons">
                                 <div class="d-flex flex-row flex-wrap">
-                                    <a href="#aboutme"><button type="button" class="btn button primary-button mr-4">Get to know me</button></a>
+                                    <a href="./index.html"><button type="button" class="btn button primary-button mr-4">Get to know me</button></a>
                                     <button type="button" class="btn button secondary-button" type="submit" onclick="window.open('TAO “JENNY” ZHENG-Resume.pdf')">Resume</button>
                                 </div>
                             </div>
