--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                     <h1 class="text-uppercase title-h1 text-center" id="gallery" style="font-size: 3.5rem;color: #554236; font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;">Projects</h1>
                     <h2 class="text-uppercase title-h2 text-center" style="font-style:italic; font-size: 1rem;color: #734338;font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;">School/Work/Personal</h2>
                 </div>
-                <div class="button-group">
+                <div class="button-group" style="margin-bottom: 1rem;">
                     <button type="button" class="active" data-filter="*">All</button>
                     <button type="button" data-filter=".uiux">UI/UX</button>
                     <button type="button" data-filter=".motion">Motion</button>
@@ -296,6 +296,8 @@
     </footer>
     <!-- Jquery js file-->
     <script src="./pavo/js/jquery.min.js"></script>
+     <!-- Jquery js file-->
+     <script src="js/jquery.3.6.0.js"></script>
     
     <!-- bootstrap js file-->
     <script src="./pavo/js/bootstrap.min.js"></script>
