--- a/projects.html
+++ b/projects.html
@@ -72,15 +72,15 @@
         </div>   
     <!-- ==================Start Main Area===============-->
     <div>
-        <a href="./urban.html"> <div class="card">
+        <a href="./urban.html"> <div class="card project_card">
         <img src="./pavo/images/p1.jpg" class="card-img" alt="...">
       </div>
     </a>
-    <a href="./nasa.html"><div class="card">
+    <a href="./nasa.html"><div class="card project_card">
         <img src="./pavo/images/p2.jpg" class="card-img" alt="...">
       </div>
     </a>
-    <a href="./triplan.html"><div class="card">
+    <a href="./triplan.html"><div class="card project_card">
         <img src="./pavo/images/p5.jpg" class="card-img" alt="...">
       </div>
     </a>
