--- a/urban.html
+++ b/urban.html
@@ -93,7 +93,7 @@
                     <div class="ms-auto"></div>
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link" href="./index.html">about me <span class="sr-only">(current)</span></a>
+                            <a class="nav-link" href="./index.html">about me</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="./index.html#gallery">gallery</a>
@@ -172,7 +172,7 @@
                                 </span>
                                 <div class="media-body">
                                     <h5>What</h5>
-                                    <p>A straightforward and concise dictionary app made for people who want to understand up-to-date American culture terms and expressions.</p>
+                                    <p>A straightforward and concise dictionary app made for people who want to understand up-to-date English culture terms and expressions.</p>
                                 </div>
                             </li>
                         </ul>
