--- a/nasa.html
+++ b/nasa.html
@@ -229,7 +229,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-xl-10 offset-xl-1">
-                    <div class="text-box mb-5" style="background-color:#ffd9bc65;">
+                    <div class="text-box mb-5" style="background-color:#ffeabc65;">
                         <h3>Project Intro</h3>
                         <p>The ARISA Lab is working on the next Eclipse Soundscape project that is coming up in 2022/2023.</p>
                         <p>With the help of citizen scientists, NASA subject matter experts (SMEs) will collect audio recordings from eclipses
@@ -237,9 +237,11 @@
                              They need an accessible and inclusive way for all citizen scientists to easily participate in this meaningful project.
                              
                         </p>
-                        <p><b>Let me introduce you to the new Eclipse Soundscapes’ Citizen Science Project...
+                        <p class="mb-5"><b>Let me introduce you to the new Eclipse Soundscapes’ Citizen Science Project...
                         </b></p>
-                        </div> <!-- end of text-box -->
+                        <a class="btn-solid-reg mb-5" href="https://www.figma.com/proto/YtQC5W9UET1ZjBk3nfQekC/UX-Team-Project?page-id=0%3A1&node-id=50%3A255&viewport=177%2C-130%2C0.07571465522050858&scaling=min-zoom" 
+                    style="display: block; margin-left: auto; margin-right: auto; width: 40%; text-align: center;">Explore Prototype</a>
+                    </div> <!-- end of text-box -->
 
                     <h5><small>The Problem</small></h5>                       
                     <h2 class="mb-4">Problem Statement</h2>
