--- a/urban.html
+++ b/urban.html
@@ -225,10 +225,12 @@
                             However, it seems like everyone else all know the meaning and you are already too afraid to ask. 
                         </p>
                         <p>You might have heard of urban dictionary before. In fact, it might already be one of the most commonly used sources on the internet. But there’s still a lot that can be changed and updated, especially their mobile app.</p>
-                        <p><b>Let me introduce you to the new Urban Dictionary App...</b></p>
-                        </div> <!-- end of text-box -->
-
-                    <h5><small>The Problem</small></h5>                       
+                        <p class="mb-5"><b>Let me introduce you to the new Urban Dictionary App...</b></p>
+                        <a class="btn-solid-reg mb-5" href="https://www.figma.com/proto/83mKNtRaCIb1BwlJ2QdMOi/Untitled?page-id=0%3A1&node-id=1%3A2&viewport=395%2C317%2C0.21352867782115936&scaling=scale-down" 
+                        style="display: block; margin-left: auto; margin-right: auto; width: 40%; text-align: center;">Explore Prototype</a>
+                    </div> <!-- end of text-box -->
+                    
+                        <h5><small>The Problem</small></h5>                       
                     <h2 class="mb-4">Problem Statement</h2>
                     <p>People like international students studying in the U.S have trouble with understanding American Culture (slang, jokes, references, etc...),which can be resolved by a dictionary app to learn the meaning and usage.</p>
                     <p class="mb-5">We know we’re right when more international students download our app.</p>
@@ -325,9 +327,10 @@
                     </ul>
                     <h2 class="mb-4">Competitor Analysis</h2>
                     <img class="img-fluid mb-5" src="./img/urban/competitor_analysis.jpg" alt="alternative">
+                    <!--
                     <p>Some useful extra pages are bundled with the template lik article details, terms conditions and privacy policy which can be customized as per your requirements. Riga has an impactful dark style design combined with warm colors and angular background shapes with the unique goal of making your mobile app stand out.</p>
                     <p class="mb-5">Leon is an easy to customize landing page HTML template built with Bootstrap for promoting mobile apps to the online audience and making visitors download them from app stores. This template is built with HTML, CSS and Bootstrap to ensure the highest flexibility for all users.</p>
-
+                    -->
                     <ul class="list-unstyled li-space-lg mb-5">
                         <li class="media">
                             <i class="fas fa-square"></i>
