--- a/triplan.html
+++ b/triplan.html
@@ -404,15 +404,15 @@
                     <ul class="list-unstyled li-space-lg mb-5">
                         <li class="media">
                             <i class="fas fa-square"></i>
-                            <div class="media-body">Have a real time trending terms list</div>
+                            <div class="media-body">Have recommended routes/trips</div>
                         </li>
                         <li class="media">
                             <i class="fas fa-square"></i>
-                            <div class="media-body">Have translation to different languages</div>
+                            <div class="media-body">Have translation to different languages if the trip is foreign</div>
                         </li>
                         <li class="media">
                             <i class="fas fa-square"></i>
-                            <div class="media-body">Create a community</div>
+                            <div class="media-body">Create a community to share fun trips</div>
                         </li>
                     </ul>
                 </div> <!-- end of col -->
