--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                         </div>
 
                     </div>
-                    <div class="col-lg-4 col-md-6 col-sm-12 element-item uiux">
+                  <!--  <div class="col-lg-4 col-md-6 col-sm-12 element-item uiux">
                         <div class="our-project">
                             <div class="img">
                                 <a href="./cnn.html"><img src="./img/portfolio/p6.jpg" alt="portfolio 6" style="width:100%"></a>
@@ -200,9 +200,10 @@
                                 <h4 class="text-uppercase">CNN Website</h4>
                                 <span class="text-secondary">UI/UX, Group</span>
                             </div>
+                            
                         </div>
-
                     </div>
+                    -->
                     <div class="col-lg-4 col-md-6 col-sm-12 element-item motion">
                         <div class="our-project">
                             <div class="img">
@@ -259,6 +260,18 @@
                             <div class="title py-4">
                                 <h4 class="text-uppercase">New York Interior</h4>
                                 <span class="text-secondary">Film, Individual</span>
+                            </div>
+                        </div>
+
+                    </div>
+                    <div class="col-lg-4 col-md-6 col-sm-12 element-item still">
+                        <div class="our-project">
+                            <div class="img">
+                                <a href="./typeoftypes.html"><img src="./img/flashcards/Artboard 2.png" alt="portfolio 12" style="width:100%"></a>
+                            </div>
+                            <div class="title py-4">
+                                <h4 class="text-uppercase">Type of Types</h4>
+                                <span class="text-secondary">Print, Individual</span>
                             </div>
                         </div>
 
