--- a/fun.html
+++ b/fun.html
@@ -60,6 +60,15 @@
 		<!-- ==================End Header Area===============-->
         
     <!-- ==================Start Main Area===============-->
+    <div class="project-area" style="max-height: 80px;">
+        <div class="container">
+            <div class="project-title pb-5">
+                <h1 class="text-uppercase title-h1 text-center" style="font-size: 3.5rem;color: #3b3b3b; font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; margin-top: 3rem;">Stay tuned...</h1>
+                <h2 class="text-uppercase title-h2 text-center" style="font-style:italic; font-size: 1rem;color: #f0c184;font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;margin-top: 0rem;">foodie, needle felting, home organizing/decor, fanmade-videos, etc.</h2>
+                
+            </div>
+        </div>
+    </div>
     <!-- ====================End Main Area===============-->
 
         <footer class="footer-area">
