--- a/projects.html
+++ b/projects.html
@@ -64,7 +64,7 @@
         <div class="project-area" style="max-height: 80px;">
             <div class="container">
                 <div class="project-title pb-5">
-                    <h1 class="text-uppercase title-h1 text-center" style="font-size: 3.5rem;color: #734338; font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; margin-top: 3rem;">Main Projects</h1>
+                    <h1 class="text-uppercase title-h1 text-center" style="font-size: 3.5rem;color: #000000; font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; margin-top: 3rem;">Main Projects</h1>
                     <h2 class="text-uppercase title-h2 text-center" style="font-style:italic; font-size: 1rem;color: #B9887D;font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;margin-top: 0rem;">All about UI/UX </h2>
                     
                 </div>
@@ -73,15 +73,15 @@
     <!-- ==================Start Main Area===============-->
     <div>
         <a href="./urban.html"> <div class="card project_card">
-        <img src="./pavo/images/p1.jpg" class="card-img" alt="...">
+        <img src="./pavo/images/p1.jpg" class="card-img" alt="..." style="border-radius: 15px 50px;"> 
       </div>
     </a>
     <a href="./nasa.html"><div class="card project_card">
-        <img src="./pavo/images/p2.jpg" class="card-img" alt="...">
+        <img src="./pavo/images/p2.jpg" class="card-img" alt="..." style="border-radius: 15px 50px;">
       </div>
     </a>
     <a href="./triplan.html"><div class="card project_card">
-        <img src="./pavo/images/p5.jpg" class="card-img" alt="...">
+        <img src="./pavo/images/p5.jpg" class="card-img" alt="..." style="border-radius: 15px 50px;">
       </div>
     </a>
     </div>
