--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jenny Z</title>
+    <link rel="shortcut icon" type="image/jpg" href="./img/logo.png"/>
     
     <!-- bootstrap css file-->
     <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -135,7 +136,7 @@
                     <div class="col-lg-4 col-md-6 col-sm-12 element-item uiux">
                         <div class="our-project">
                             <div class="img">
-                                <a href="./urban.html"><img src="./img/portfolio/p1.jpg" alt="portfolio 1" style="width:100%"></a>
+                                <a href="./urban.html"><img src="./img/portfolio/p1.jpg" alt="portfolio 1" style="width:100%; "></a>
                             </div>
                             <div class="title py-4">
                                 <h4 class="text-uppercase">Urban Dictionary</h4>
@@ -243,7 +244,7 @@
                     <div class="col-lg-4 col-md-6 col-sm-12 element-item motion">
                         <div class="our-project">
                             <div class="img">
-                                <a href="./hospitalplaylist.html"><img src="./img/portfolio/p9.jpg" alt="portfolio 9" style="width:100%"></a>
+                                <a href="./hospitalplaylist.html"><img src="./img/portfolio/p9.jpg" alt="portfolio 9" style="width:100%;"></a>
                             </div>
                             <div class="title py-4">
                                 <h4 class="text-uppercase">Hospital Playlist</h4>
