--- a/index.html
+++ b/index.html
@@ -102,12 +102,13 @@
                     <h1 class="text-uppercase title-h1 text-center" id="gallery" style="font-size: 3.5rem;color: #554236; font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;">Projects</h1>
                     <h2 class="text-uppercase title-h2 text-center" style="font-style:italic; font-size: 1rem;color: #734338;font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;">School/Work/Personal</h2>
                 </div>
-                <div class="button-group" style="margin-bottom: 1rem;">
+             <!--   <div class="button-group" style="margin-bottom: 1rem;">
                     <button type="button" class="active" data-filter="*">All</button>
                     <button type="button" data-filter=".uiux">UI/UX</button>
                     <button type="button" data-filter=".motion">Motion</button>
                     <button type="button" data-filter=".still">Still</button>
                 </div>
+                -->
                 <div class="row grid">
                     <div class="col-lg-4 col-md-6 col-sm-12 element-item uiux blogBox moreBox" style="display: none;">
                         <div class="our-project">
@@ -147,7 +148,7 @@
                     <div class="col-lg-4 col-md-6 col-sm-12 element-item still blogBox moreBox" style="display: none;">
                         <div class="our-project">
                             <div class="img">
-                                <a href="./dogandponyshow.html"><img src="./img/portfolio/p4.jpg" alt="portfolio 4" style="width:90%"></a>
+                                <a href="./dogandponyshow.html"><img src="./img/dogandponyshow/dog and pony4.png" alt="portfolio 4" style="width:90%"></a>
                             </div>
                             <div class="title py-4">
                                 <h4 class="text-uppercase">Dog and Pony Show</h4>
