--- a/projects.html
+++ b/projects.html
@@ -129,7 +129,7 @@
             </a>
             </div>
             <div class="project_container">
-                <a href="./nasa.html"><div class="card project_card">
+                <a href="./triplan.html"><div class="card project_card">
                     <img src="./pavo/images/p5.jpg" class="card-img" alt="..." style="border-radius: 15px 50px;">
                     <div class="middle">
                         <div class="text" style="font-size:1.5vw;background-color: #197c7c">Learn more about Triplan >></div> 
