--- a/fun.html
+++ b/fun.html
@@ -141,9 +141,9 @@
 
     <div class="swiper mySwiper">
       <div class="swiper-wrapper">
-        <div class="swiper-slide"><img src="../img/fun/IMG_3066.JPG" alt="home-decor"></div>
-        <div class="swiper-slide"><img src="../img/fun/IMG_3067.JPG" alt="home-decor"></div>
-        <div class="swiper-slide"><img src="../img/fun/IMG_3065.JPG" alt="home-decor"></div>
+        <div class="swiper-slide"><img src="./img/fun/home1.jpg" alt="home-decor"></div>
+        <div class="swiper-slide"><img src="./img/fun/home2.jpg" alt="home-decor"></div>
+        <div class="swiper-slide"><img src="./img/fun/home3.jpg" alt="home-decor"></div>
         <!-- <div class="swiper-slide">Slide 5</div>
         <div class="swiper-slide">Slide 6</div>
         <div class="swiper-slide">Slide 7</div>
