--- a/triplan.html
+++ b/triplan.html
@@ -92,6 +92,12 @@ a.back-to-top {
 a:hover.back-to-top {
 	background-color: #F9C37F;
 }
+
+.related_img{
+    border: 1px solid #ccc;
+  box-shadow: 2px 2px 6px 0px  rgba(0,0,0,0.3);
+  max-width: 100%;
+}
 </style>
 </head>
 <body data-spy="scroll" data-target=".fixed-top">
@@ -437,6 +443,55 @@ a:hover.back-to-top {
         </div> <!-- end of container -->
     </div> <!-- end of ex-basic-1 -->
     <!-- end of basic -->
+
+    <!-- Related area-->
+    <div class="project-area">
+        <div class="container">
+            <div class="flex">
+            <div class="project-title pb-5">
+                <h2 class="title-h2 text-center" style="font-size: 1rem;color: #5a5a5a;font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;">Other projects you might find interesting:</h2>
+            </div>
+
+            <div class="row grid">
+                <div class="col-lg-4 col-md-6 col-sm-12 element-item">
+                    <div class="our-project">
+                        <div class="img">
+                            <a href="./urban.html"><img class="related_img" src="./img/portfolio/p1.jpg" alt="portfolio 1" style="max-height:80%; "></a>
+                        </div>
+                        <div class="title py-4">
+                            <h4 class="text-uppercase">Urban Dictionary</h4>
+                            <span class="text-secondary">UI/UX, Individual</span>
+                        </div>
+                    </div>
+
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-12 element-item">
+                    <div class="our-project">
+                        <div class="img">
+                            <a href="./nasa.html"><img class="related_img" src="./img/portfolio/p2.jpg" alt="portfolio 2" style="width:100%"></a>
+                        </div>
+                        <div class="title py-4">
+                            <h4 class="text-uppercase">NASA Eclipse Soundscape</h4>
+                            <span class="text-secondary">UI/UX, Group</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-12 element-item">
+                    <div class="our-project">
+                        <div class="img">
+                            <a href="./dogandponyshow.html"><img class="related_img" src="./img/dogandponyshow/dog and pony4.png" alt="portfolio 4" style="width:90%"></a>
+                        </div>
+                        <div class="title py-4">
+                            <h4 class="text-uppercase">Dog and Pony Show</h4>
+                            <span class="text-secondary">InDesign, Individual</span>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </div>
+    <!--End of Related area-->
 
     <footer class="footer-area">
         <div class="container">
