--- a/urban.html
+++ b/urban.html
@@ -443,7 +443,55 @@ a:hover.back-to-top {
     </div> <!-- end of ex-basic-1 -->
     <!-- end of basic -->
 
+    <!-- Related area-->
+    <div class="project-area">
+        <div class="container">
+            <div class="flex">
+            <div class="project-title pb-5">
+                <h2 class="title-h2 text-center" style="font-size: 1rem;color: #5a5a5a;font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;">Other projects you might find interesting:</h2>
+            </div>
 
+            <div class="row grid">
+        
+                <div class="col-lg-4 col-md-6 col-sm-12 element-item">
+                    <div class="our-project">
+                        <div class="img">
+                            <a href="./triplan.html"><img src="./img/portfolio/p5.jpg" alt="portfolio 5" style="width:100%"></a>
+                        </div>
+                        <div class="title py-4">
+                            <h4 class="text-uppercase">Triplan</h4>
+                            <span class="text-secondary">UI/UX, Individual</span>
+                        </div>
+                    </div>
+
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-12 element-item">
+                    <div class="our-project">
+                        <div class="img">
+                            <a href="./nasa.html"><img class="related_img" src="./img/portfolio/p2.jpg" alt="portfolio 2" style="width:100%"></a>
+                        </div>
+                        <div class="title py-4">
+                            <h4 class="text-uppercase">NASA Eclipse Soundscape</h4>
+                            <span class="text-secondary">UI/UX, Group</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-12 element-item">
+                    <div class="our-project">
+                        <div class="img">
+                            <a href="./dogandponyshow.html"><img class="related_img" src="./img/dogandponyshow/dog and pony4.png" alt="portfolio 4" style="width:90%"></a>
+                        </div>
+                        <div class="title py-4">
+                            <h4 class="text-uppercase">Dog and Pony Show</h4>
+                            <span class="text-secondary">InDesign, Individual</span>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </div>
+    <!--End of Related area-->
     <footer class="footer-area">
         <div class="container">
             <div class="">
