--- a/triplan.html
+++ b/triplan.html
@@ -456,7 +456,7 @@ a:hover.back-to-top {
                 <div class="col-lg-4 col-md-6 col-sm-12 element-item">
                     <div class="our-project">
                         <div class="img">
-                            <a href="./urban.html"><img class="related_img" src="./img/portfolio/p1.jpg" alt="portfolio 1" style="max-height:80%; "></a>
+                            <a href="./urban.html"><img class="related_img" src="./img/portfolio/p1.jpg" alt="portfolio 1" style="width:100%; "></a>
                         </div>
                         <div class="title py-4">
                             <h4 class="text-uppercase">Urban Dictionary</h4>
