--- a/dogandponyshow.html
+++ b/dogandponyshow.html
@@ -136,7 +136,7 @@ a:hover.back-to-top {
         </div>
     </header><!-- end of navbar -->
     <!-- end of navigation -->
-    <div class="project-area" style="max-height: 80px;">
+    <div class="project-area" style="max-height: 80px;margin-bottom: 1rem;">
         <div class="container">
             <div class="project-title pb-5">
                 <h1 class="text-uppercase title-h1 text-center" style="font-size: 3.5rem;color: #382118; font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; margin-top: 3rem;">Dog and Pony Show</h1>
