--- a/nasa.html
+++ b/nasa.html
@@ -150,7 +150,7 @@ a:hover.back-to-top {
         </div>
     </header><!-- end of navbar -->
     <!-- end of navigation -->
-    <div class="project-area" style="max-height: 80px;">
+    <div class="project-area" style="max-height: 80px; margin-bottom: 1rem;">
         <div class="container">
             <div class="project-title pb-5">
                 <h1 class="text-uppercase title-h1 text-center" style="font-size: 3.5rem;color: #EC6B38; font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; margin-top: 3rem;">Nasa Soundscape</h1>
@@ -166,7 +166,7 @@ a:hover.back-to-top {
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <img class="img-fluid mt-5 mb-3" src="./pavo/images/p2.jpg" alt="nasa image" style="max-width: 100%;border-radius: 15px 50px; ">
+                    <img class="img-fluid mt-5 mb-3" src="./pavo/images/p2.jpg" alt="nasa image" style="max-width: 100%;border-radius: 0.938rem 3.125rem; ">
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
         </div> <!-- end of container -->
@@ -257,7 +257,7 @@ a:hover.back-to-top {
                         <p class="mb-5"><b>Let me introduce you to the new Eclipse Soundscapes’ Citizen Science Project...
                         </b></p>
                         <a class="btn-solid-reg mb-5" href="https://www.figma.com/proto/YtQC5W9UET1ZjBk3nfQekC/UX-Team-Project?page-id=0%3A1&node-id=50%3A255&viewport=177%2C-130%2C0.07571465522050858&scaling=min-zoom" 
-                    style="display: block; margin-left: auto; margin-right: auto; width: 40%; text-align: center;">Explore Prototype</a>
+                    style="display: block; margin-left: auto; margin-right: auto; width: 60%; text-align: center; font-size: 80%;">Explore Prototype</a>
                     </div> <!-- end of text-box -->
 
                     <h5><small>The Problem</small></h5>                       
@@ -431,7 +431,7 @@ a:hover.back-to-top {
 
                     
                     <a class="btn-solid-reg mb-5" href="https://www.figma.com/proto/YtQC5W9UET1ZjBk3nfQekC/UX-Team-Project?page-id=0%3A1&node-id=50%3A255&viewport=177%2C-130%2C0.07571465522050858&scaling=min-zoom" 
-                    style="display: block; margin-left: auto; margin-right: auto; width: 40%; text-align: center;">Explore Prototype</a>
+                    style="display: block; margin-left: auto; margin-right: auto; width: 60%; text-align: center; font-size: 80%;">Explore Prototype</a>
                     <h2 class="mb-3">Retrospective</h2>
                     <p class="mb-4">Future Focus</p>
                     <ul class="list-unstyled li-space-lg mb-5">
