--- a/newyorkinterior.html
+++ b/newyorkinterior.html
@@ -82,7 +82,7 @@ h1{
 	
 
 				<!-- Header -->
-				<div class="project-area">
+				<div class="project-area" style="max-height: 110px;margin-bottom: 1rem;">
 					<div class="container">
 						<div class="project-title pb-5">
 							<h1 class="text-uppercase title-h1 text-center" id="gallery" style="font-size: 3.5rem;color: #554236; font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;">New York Interior</h1>
