--- a/projects.html
+++ b/projects.html
@@ -96,7 +96,7 @@
 			</div>
 		</header>
 		<!-- ==================End Header Area===============-->
-        <div class="project-area" style="max-height: 80px;">
+        <div class="project-area" style="max-height: 80px;margin-bottom: 1rem;">
             <div class="container">
                 <div class="project-title pb-5">
                     <h1 class="text-uppercase title-h1 text-center" style="font-size: 3.5rem;color: #000000; font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; margin-top: 3rem;">Main Projects</h1>
@@ -109,7 +109,7 @@
     <div>
         <div class="project_container">
         <a href="./nasa.html"><div class="card project_card">
-            <img src="./pavo/images/p2.jpg" class="card-img" alt="..." style="border-radius: 15px 50px;">
+            <img src="./pavo/images/p2.jpg" class="card-img" alt="..." style="border-radius: 0.938rem 3.125rem;">
             <div class="middle">
                 <div class="text" style="font-size:1.5vw; background-color: #aa5d04;">Learn more about Eclipse Soundscapes >></div> 
         </div>
@@ -118,7 +118,7 @@
         </div>
         <div class="project_container">
             <a href="./urban.html"><div class="card project_card">
-                <img src="./pavo/images/p1.jpg" class="card-img" alt="..." style="border-radius: 15px 50px;">
+                <img src="./pavo/images/p1.jpg" class="card-img" alt="..." style="border-radius: 0.938rem 3.125rem;">
                 <div class="middle">
                     <div class="text" style="font-size:1.5vw;background-color: #19397c">Learn more about Urban Dictionary >></div> 
             </div>
@@ -127,7 +127,7 @@
             </div>
             <div class="project_container">
                 <a href="./triplan.html"><div class="card project_card">
-                    <img src="./pavo/images/p5.jpg" class="card-img" alt="..." style="border-radius: 15px 50px;">
+                    <img src="./pavo/images/p5.jpg" class="card-img" alt="..." style="border-radius: 0.938rem 3.125rem;">
                     <div class="middle">
                         <div class="text" style="font-size:1.5vw;background-color: #197c7c">Learn more about Triplan >></div> 
                 </div>
