--- a/triplan.html
+++ b/triplan.html
@@ -139,7 +139,7 @@ a:hover.back-to-top {
         </div>
     </header><!-- end of navbar -->
     <!-- end of navigation -->
-    <div class="project-area" style="max-height: 80px;">
+    <div class="project-area" style="max-height: 80px;margin-bottom: 1rem;">
         <div class="container">
             <div class="project-title pb-5">
                 <h1 class="text-uppercase title-h1 text-center" style="font-size: 3.5rem;color: #55939C; font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; margin-top: 3rem;">Triplan</h1>
@@ -155,7 +155,7 @@ a:hover.back-to-top {
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <img class="img-fluid mt-5 mb-3" src="./pavo/images/p5.jpg" alt="nasa image" style="max-width: 100%; border-radius: 15px 50px;">
+                    <img class="img-fluid mt-5 mb-3" src="./pavo/images/p5.jpg" alt="triplan image" style="max-width: 100%;border-radius: 0.938rem 3.125rem;">
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
         </div> <!-- end of container -->
@@ -251,7 +251,7 @@ a:hover.back-to-top {
                         <h5><small>The Problem</small></h5>                       
                     <h2 class="mb-4">Problem Statement</h2>
                     <p>People like travelers need a way to plan and organize trips in a more convenient way, which can be resolved by a travel planning app that works as a travel calendar and and also a search engine for publish crowd-sourced reviews.</p>
-                    <img class="img-fluid mb-5" src="./img/triplan/howitworks.png" alt="alternative" style="display: block; margin-left: auto; margin-right: auto; width: 100%; text-align: center;border-radius: 15px 50px;">
+                    <img class="img-fluid mb-5" src="./img/triplan/howitworks.png" alt="alternative" style="display: block; margin-left: auto; margin-right: auto; width: 100%; text-align: center;border-radius: 0.938rem 3.125rem;">
 
                    
                     <h2 class="mb-3">Feature Prioritization</h2>
@@ -421,7 +421,7 @@ a:hover.back-to-top {
                     <h2 class="mb-4">Prototype</h2>
                     <img class="img-fluid mb-5" src="./img/triplan/showcase.png" alt="alternative">
                     <a class="btn-solid-reg mb-5" href="https://xd.adobe.com/view/97d6187b-56c2-4060-8934-0be210402adc-c285/" 
-                    style="display: block; margin-left: auto; margin-right: auto; width: 40%; text-align: center;">Explore Prototype</a>
+                    style="display: block; margin-left: auto; margin-right: auto; width: 60%; text-align: center; font-size: 80%;">Explore Prototype</a>
                     <h2 class="mb-3">Retrospective</h2>
                     <p class="mb-4">Future Plans</p>
                     <ul class="list-unstyled li-space-lg mb-5">
