--- a/fun.html
+++ b/fun.html
@@ -129,7 +129,7 @@
 		<!-- ==================End Header Area===============-->
         
     <!-- ==================Start Main Area===============-->
-    <div class="project-area" style="max-height: 80px;">
+    <div class="project-area" style="max-height: 80px;" style="max-height: 110px;margin-bottom: 1rem;">
         <div class="container">
             <div class="project-title pb-5">
                 <h1 class="text-uppercase title-h1 text-center" style="font-size: 3.5rem;color: #f0c184; font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; margin-top: 3rem;">For Fun</h1>
