--- a/urban.html
+++ b/urban.html
@@ -133,7 +133,7 @@ a:hover.back-to-top {
         </div>
     </header><!-- end of navbar -->
     <!-- end of navigation -->
-    <div class="project-area" style="max-height: 110px;">
+    <div class="project-area" style="max-height: 110px;margin-bottom: 1rem;">
         <div class="container">
             <div class="project-title pb-5">
                 <h1 class="text-uppercase title-h1 text-center" style="font-size: 3.5rem;color: #0D4E8D; font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; margin-top: 3rem;">Urban Dictionary</h1>
@@ -149,7 +149,7 @@ a:hover.back-to-top {
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <img class="img-fluid mt-5 mb-3" src="./pavo/images/p1.jpg" alt="urban dictionary image" style="max-width: 100%;border-radius: 15px 50px; ">
+                    <img class="img-fluid mt-5 mb-3" src="./pavo/images/p1.jpg" alt="urban dictionary image" style="max-width: 100%;border-radius: 0.938rem 3.125rem; ">
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
         </div> <!-- end of container -->
@@ -244,14 +244,14 @@ a:hover.back-to-top {
                         <p>You might have heard of urban dictionary before. In fact, it might already be one of the most commonly used sources on the internet. But there’s still a lot that can be changed and updated, especially their mobile app.</p>
                         <p class="mb-5"><b>Let me introduce you to the new Urban Dictionary App...</b></p>
                         <a class="btn-solid-reg mb-5" href="https://www.figma.com/proto/83mKNtRaCIb1BwlJ2QdMOi/Untitled?page-id=0%3A1&node-id=1%3A2&viewport=395%2C317%2C0.21352867782115936&scaling=scale-down" 
-                        style="display: block; margin-left: auto; margin-right: auto; width: 40%; text-align: center;">Explore Prototype</a>
+                        style="display: block; margin-left: auto; margin-right: auto; width: 60%; text-align: center; font-size: 80%;">Explore Prototype</a>
                     </div> <!-- end of text-box -->
                     
                         <h5><small>The Problem</small></h5>                       
                     <h2 class="mb-4">Problem Statement</h2>
                     <p>People like international students studying in the U.S have trouble with understanding American Culture (slang, jokes, references, etc...), which can be resolved by a dictionary app to learn the meaning and usage.</p>
                     <p class="mb-5">We know we’re right when more international students download our app.</p>
-                    <img class="img-fluid mb-5" src="./img/urban/meme.jpg" alt="alternative" style="border-radius: 20px;">
+                    <img class="img-fluid mb-5" src="./img/urban/meme.jpg" alt="alternative" style="border-radius: 1.2rem;">
 
                    
                     <h2 class="mb-3">Feature Prioritization</h2>
@@ -420,7 +420,7 @@ a:hover.back-to-top {
                     <h2 class="mb-4">Prototype</h2>
                     <img class="img-fluid mb-5" src="./img/urban/wireframe_showcase.png" alt="alternative">
                     <a class="btn-solid-reg mb-5" href="https://www.figma.com/proto/83mKNtRaCIb1BwlJ2QdMOi/Untitled?page-id=0%3A1&node-id=1%3A2&viewport=395%2C317%2C0.21352867782115936&scaling=scale-down" 
-                    style="display: block; margin-left: auto; margin-right: auto; width: 40%; text-align: center;">Explore Prototype</a>
+                    style="display: block; margin-left: auto; margin-right: auto; width: 60%; text-align: center; font-size: 80%;">Explore Prototype</a>
                     <h2 class="mb-3">Retrospective</h2>
                     <p class="mb-4">Future Plans</p>
                     <ul class="list-unstyled li-space-lg mb-5">
